[package]
name = "high_and_low"
version = "0.1.0"
edition = "2024"
authors = ["yoshitaka-k"]
description = "High & Low"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
strip = true

[profile.compact]
inherits = "release"
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[dependencies]
color-eyre = "0.6.5"
getset = "0.1.6"
ratatui = "0.30.0"
