[package]
name = "high_and_low"
version = "0.16.4"
edition = "2024"
authors = ["yoshitaka-k"]
description = "High & Low"
license = "Apache-2.0"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
strip = true

[profile.compact]
inherits = "release"
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[dependencies]
color-eyre = "0.6.5"
figlet-rs = "1.0.0"
getset = "0.1.6"
ratatui = "0.30.0"
